# First-Project

./: README.md  проект.rar
проект/: CMakeLists.txt  README.md  answers.json  config.json  requests.json
проект/include/: ConverterJSON.h  InvertedIndex.h  SearchEngine.h
проект/resources/: file001.txt  file002.txt  file003.txt  file004.txt  file005.txt  file006.txt  file007.txt  file009.txt
проект/src/: CMakeLists.txt  ConverterJSON.cpp  InvertedIndex.cpp  SearchEngine.cpp  main.cpp
проект/tests/: CMakeLists.txt  ConverterJSON_test.cpp  InvertedIndex_test.cpp  SearchEngine_test.cpp
